<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bizhi"
     >

    <EditText
        android:id="@+id/IpEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SocketEditText"
        android:text="@string/default_ip" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/IpEditText"
        android:layout_alignBottom="@+id/IpEditText"
        android:layout_alignParentLeft="true"
        android:text="@string/iplabal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/SocketEditText"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IpEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:inputType="number"
        android:text="@string/default_socket" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ConnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SocketEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/connectButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SocketEditText"
        android:layout_alignBottom="@+id/SocketEditText"
        android:layout_alignParentLeft="true"
        android:text="@string/socketlabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ConnectButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="54dp"
        android:text="@string/aboutlabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/fs" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:text="@string/help"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/helptitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

</RelativeLayout>